Made in process execution of integration test work. Updated build scripts to work with newest HEAD. - Updated QuickGradleExecuter and InProcessGradleExecuter - Updated IntegrationTest to behave well in embedded mode. For example by not using System properties for communication between tasks. - Added switches to the build script to turn on non forked integ tests execution.